force-app/main/default/objects/Emp_1__c/Emp_1__c.object-meta.xml
<CustomObject>
    <label>Emp1</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Address#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emp1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>