force-app/main/default/objects/Emp_1__c/fields/Total_Address__c.field-meta.xml
<CustomField>
    <fullName>Total_Address__c</fullName>
    <formula>IF(ISNULL(City__c),&apos;&apos;,City__c)&amp;&quot;,       &quot;&amp;IF(ISNULL(City__c ),&apos;&apos;,City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Address</label>
    <type>Text</type>
</CustomField>